Sun Nov 20 19:35:18 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CollocatedPubSub/PubSubComponent/PubSub_Component_exec.cpp:
          Fixed msvc warning

Sun Nov 20 19:34:21 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:
          Fixed incorrect definition of parameters for template module
          reference definition (only used with full CCM builds).

Thu Nov 17 10:21:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
          Extended this test with attributes

Fri Nov 11 11:22:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged rw_block_strategy branch.

        === start changelog ===

        Thu Nov 10 14:15:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * bin/ciao_tests.lst:
                * connectors/ami4ccm/examples/Hello/descriptors/PlanFullBlock.cdp:
                * connectors/ami4ccm/examples/Hello/descriptors/run_fullblock_test.pl:

                  Added variant of test using full blocking container servers
                  (LocalityManager).

        === end changelog ===

Thu Nov 03 13:25:13 UTC 2011   Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/Collocation/Sender/Sender_exec.cpp:
        * bin/ciao_tests.lst

          Only if defined CCM_DIRECTCOLL run test.

Thu Nov 03 08:52:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Fixed WCHAR compile problem.

Wed Nov 02 12:09:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
        * tests/Collocation/Receiver/Receiver_exec.cpp:
        Cancel timer and delete generators

Wed Nov 02 08:04:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
        * tests/Collocation/Receiver/Receiver_exec.cpp:
        * tests/Collocation/Sender/Sender_exec.cpp:
        Removed unreferenced local variables

